<resources>
    <string name="app_name">FinalApp</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="saved">SAVED</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authenticator_app">Authenticator App</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="phone">phone</string>
    <string name="register">Register</string>
    <string name="email_address">Email address</string>
    <string name="map_key" translatable="false">AIzaSyCnybAKPqR99kglPQlmjGaihjO4C9W0QRU</string>

</resources>